
* 0.5.2 *

* Allow MiniPortile to build any FreeTDS version we need. Fixes #76.

* Always convert password option to string. Fixes #92.

* Move test system to real MiniTest::Spec. All tests pass on Azure too.

* Raise and handle encoding errors on DB writes. Fixes #89.


* 0.5.1 *

* Change how we configure with iconv, basically it is always needed. Fixes #11 & #69.


* 0.5.0 *

* Copy mysql2s handling of Time and Datetime so 64bit systems are leveraged. Fixes #46 and #47. Thanks @lsylvester!

* Add CFLAGS='-fPIC' for libtool. Fix TDS version configs in our ports file. Document. Fixes #45

* Update our TDS version constants to reflect changed 8.0/9.0 to 7.1/7.2 DBLIB versions in FreeTDS 
  while making it backward compatible, again like FreeTDS. Even tho you can not configure FreeTDS with
  TDS version 7.2 or technically even use it, I added tests to prove that we correctly handle both
  varchar(max) and nvarchar(max) with large amounts of data.

* FreeTDS 0.91 has been released. Update our port scripts.

* Add test for 0.91 and higher to handle incorrect syntax in sp_executesql.

* Returning empty result sets with a command batch that has multiple statements is now the default. Use :empty_sets => false to override.

* Do not raise a TinyTds::Error with our message handler unless the severity is greater than 10.


* 0.4.5 *

* Includes precompiled Windows binaries for FreeTDS 0.91rc2 & LibIconv. No precompiled OpenSSL yet for Windows to SQL Azure.

* Fixed symbolized unicode column names.

* Use same bigint ruby functions to return identity. Hopefully fixes #19.

* Release static libs for Windows.

* Change how :host/:port are implemented. Now sending "host:port" to :dataserver.


* 0.4.4 *

* New :host/:port connection options. Removes need for freetds.conf file.


* 0.4.3 *

* New Client#active? method to check for good connection. Always use this abstract method.

* Better SYBEWRIT "Write to SQL Server failed." error handling. New Client#dead? check.
