@@ -1,6 +1,8 @@
 
 * 0.5.2 *
 
+* Compile windows with `--enable-sspi`.
+
 * Allow MiniPortile to build any FreeTDS version we need. Fixes #76.
 
 * Always convert password option to string. Fixes #92.
